fix(add-expense-page): some extra padding

--- a/src/app/modules/main-page/center-box/add-expense/add-expense.component.scss
+++ b/src/app/modules/main-page/center-box/add-expense/add-expense.component.scss
@@ -22,7 +22,6 @@
 }
 
 
-
 .example-chip-list {
   width: 100%;
 }
@@ -47,7 +46,8 @@ mat-chip-list {
   margin-top: 10px;
   border-radius: 5px;
   padding: 2px;
-  width: 65%
+  width: 65%;
+  margin-bottom: 10px;
 }
 
 .mat-form-field {
@@ -97,7 +97,7 @@ button {
   min-height: 0;
 }
 
-button:disabled{
+button:disabled {
   background-color: #DDDDDD;
   opacity: 0.7;
 }
@@ -106,7 +106,8 @@ button:disabled{
 .user-box {
   width: 200px;
   height: 100%;
-  padding-top: 10px;
+  padding-top: 20px;
+  padding-left: 10px;
 }
 
 .main-expense-box {
@@ -114,7 +115,6 @@ button:disabled{
   width: 100%;
   background-color: #F5F5F5;
 }
-
 
 
 .payer-select-li {
@@ -171,7 +171,7 @@ button:disabled{
   max-height: 24px;
 }
 
-.user-data{
+.user-data {
   text-overflow: ellipsis;
   max-width: 120px;
   overflow: hidden;
@@ -202,7 +202,7 @@ button:disabled{
   width: 100%;
 }
 
-.correct-user-selected{
+.correct-user-selected {
   background-color: #5EFC8D3D;
   font-weight: bold;
 }
